kubernetes/cloudflare/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: cloudflare
spec:
  type: ExternalName
  externalName: hello-world-application-template.hello-world.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: cloudflare
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
